# api/src/tsoa/routes.ts
@@ -20,8 +20,14 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "address": {"dataType":"string","required":true},
-            "nft_id": {"dataType":"string","required":true},
-            "type": {"ref":"PoapType","required":true},
+            "createdAt": {"dataType":"datetime","required":true},
+            "eventId": {"dataType":"double","required":true},
+            "instance": {"dataType":"double","required":true},
+            "issuerId": {"dataType":"double","required":true},
+            "poap": {"dataType":"string","required":true},
+            "poapType": {"ref":"PoapType","required":true},
+            "updatedAt": {"dataType":"datetime","required":true},
+            "uuid": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
     },
